Fix tag editor dark mode again
Fixes #1090

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -2321,7 +2321,7 @@ span.sfl-save-autodesc {
     form.edittagsform {
         background-color: #000000;
     }
-    form.edittagsform span.cklabel {
+    .cklabel {
         color: #9090ff;
     }
     input, select{
@@ -2408,10 +2408,6 @@ span.sfl-save-autodesc {
     #tagEditor .viewgame__header,
     #tagDeletor .viewgame__header {
         background: #7098a8;
-    }
-
-    #tagDeletor span.cklabel {
-        color: #9090ff;
     }
 
     .restricted {
